--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.4.0",
     "html5-boilerplate": "~5.2.0",
     "bootstrap-sass": "~3.3.6",
-    "slick-carousel": "~1.5.9"
+    "slick-carousel": "~1.5.9",
+    "angular-messages": "~1.5.3"
   }
 }
